Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11868

Android: Failure when deploying extra libraries from package source dir

    XMLWordPrintable

Details

    Description

      If you refer to extra libs which are actually contained inside your project directory, androiddeployqt will fail with error code 10 because the libraries are not found.

      The reason for this is that Qt Creator sets a relative path for the extra libs without prepending $$PWD, so when doing shadow builds, the path will be invalid.

      Work-arounds for this: Prepend $$PWD manually to the paths in the .pro file, or turn off shadow builds.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              dt Daniel Teske
              esabraha Eskil Abrahamsen Blomfeldt
              Votes:
              1 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes