Android: Prepend $$PWD to paths to ANDROID_EXTRA_LIBS

Task-number: QTCREATORBUG-11868

Change-Id: I3d3e559d7d5d58efb5b28bc29b71fa812cee277c
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>